# Beez.nvim

./: .gitignore
lua/Beez/: config.lua  init.lua
lua/Beez/bufswitcher/: buf.lua  buflist.lua  config.lua  highlights.lua  init.lua  recentlist.lua  stacklist.lua  tabline.lua
lua/Beez/cmdcenter/: command.lua  db.lua  init.lua  outputs.lua
lua/Beez/cmds/: aerospace.lua  init.lua  neovide.lua
lua/Beez/codemarks/: config.lua  gmark.lua  gmarks.lua  init.lua  mark.lua  marks.lua  stack.lua  stacks.lua  utils.lua
lua/Beez/codestacks/: Cargo.toml  backend.lua  buffers.lua  config.lua  highlights.lua  init.lua  marks.lua  tabline.lua
lua/Beez/codestacks/src/: errors.rs  lib.rs  marks.rs  stacks.rs
lua/Beez/dbfp/: connections.lua  init.lua  query.lua  queryfile.lua  queryfiles.lua
lua/Beez/flotes/: blink_tags_source.lua  config.lua  init.lua  journal.lua  keymaps.lua  links.lua  notes.lua  pickers.lua  tasks.lua
lua/Beez/jj/: commands.lua  config.lua  init.lua  keymaps.lua
lua/Beez/pickers/: init.lua  picks.lua
lua/Beez/scratches/: config.lua  init.lua
lua/Beez/u/: async.lua  class.lua  cmds.lua  deck.lua  init.lua  keymaps.lua  lazy.lua  nvim.lua  os.lua  paths.lua  plugins.lua  root.lua  snippets.lua  stacktrace.lua  strings.lua  tables.lua  utf8.lua
lua/Beez/ui/: buffer.lua  float.lua  init.lua
lua/Beez/zk/: init.lua
lua/beez/: config.lua  init.lua
lua/beez/bufswitcher/: buf.lua  buflist.lua  config.lua  init.lua  recentlist.lua  stacklist.lua  tabline.lua
lua/beez/cmdcenter/: command.lua  config.lua  db.lua  init.lua  (+1 more)
plugin/: Beez.lua
(+231 files in other folders)
