
[package]
name = "codestacks_nvim"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
pkg-config = "0.3.32"

[dependencies]
mlua = { version = "0.11.3", features = ["module", "luajit"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
once_cell = "1.21.3"
thiserror = "2.0.16"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-appender = "0.2.3"
